# party-wall-django

./: Dockerfile  Makefile  docker-compose.yaml  example.env  gunicorn.conf.py  manage.py  pyproject.toml
cicd/: Dockerfile  Dockerfile.test  docker-compose.test.yaml  docker-compose.yaml
inventory/: admin.py  models.py  routers.py  serializers.py  tests.py  views.py
inventory/migrations/: 0001_initial.py
party_wall_django/: asgi.py  common.py  urls.py  wsgi.py
party_wall_django/settings/: __init__.py  base.py
